samples/_failures_safe/1761044569_9521e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bff22807.c: In function ‘main’:
./samples/SAFE/__tmp_bff22807.c:132:12: error: missing terminating " character
  132 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_bff22807.c:132:5: error: expected expression at end of input
  132 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_bff22807.c:132:5: error: expected declaration or statement at end of input
